--- a/백준11005번.md
+++ b/백준11005번.md
@@ -1,3 +1,4 @@
+[내가 짠 코드]
 ```(python)
 n,b = map(int, input().split())
 d = {0:'0', 1:'1', 2:'2', 3:'3', 4:'4', 5:'5', 6:'6', 7:'7', 8:'8', 9:'9', 10:'A',
@@ -10,6 +11,7 @@ while n>0:
     n = n//b
 print(ans[::-1])
 ```
+[더 간단한 코드]
 ```(python)
 n,b = map(int, input().split())
 d = '0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ'
