Update and rename 백준 수강신청.md to 13414.md

--- a/13414.md
+++ b/13414.md
@@ -1,3 +1,14 @@
+수강신청 문제
+1. 문제: 학번 여러개 입력, 두번이상 입력된 것은 뒤순으로 밀려남. 입력된 순으로 k개 출력
+2. dictionary활용 + 덮어쓰기 사용
+3. dictionary를 list로 저장. sort.
+4. min함수를 활용해서 for문 완성
+
+<br>
+<br>
+<br>
+
+
 ```(python)
 import sys
 input = sys.stdin.readline
