Update and rename 백준 10798번.md to 10798번.md

--- a/10798번.md
+++ b/10798번.md
@@ -1,3 +1,16 @@
+세로읽기 문제
+1. 어떻게 할지 생각이 안났음
+2. list + 이중 for문 활용함
+3. 다시 풀어보기
+
+
+<br>
+<br>
+<br>
+<br>
+
+
+
 이중 for문 활용
 ```(python)
 s = [list(input().strip()) for _ in range(5)]
