--- a/코드 필기.md
+++ b/코드 필기.md
@@ -24,6 +24,8 @@ a.append(b)
 
 4. join함수
 ' '.join(list)
+주의 : list 요소가 int가 아닌 str이어야 가능함
+그러므로 map함수로 인자를 모두 str로 바꾼 후 join해서 출력하면 시간초과 해결가능
 
 ```(python)
 a = [1,2,3]
