--- a/코드 필기.md
+++ b/코드 필기.md
@@ -41,12 +41,15 @@ int 불변 자료형
 a = 5 # 메모리1
 a = 10 # 메모리2
 a = 15 # 메모리3
->> 메모리 주소 남아 있어서 과거 사용한 흔적 내역을 확인할 수 있음
+메모리 주소 남아 있어서 과거 사용한 흔적 내역을 확인할 수 있음
+---
 
 <br>
 
 a = 5 # 메모리1
 a = 10 # 메모리2
 a = 5 # 메모리1
->> 같은 주소를 가리킴
+같은 주소를 가리킴
+---
+
 
