--- a/코드 필기.md
+++ b/코드 필기.md
@@ -46,9 +46,9 @@ a = 15 # 메모리3
 
 <br>
 
-a = 5 # 메모리1
-a = 10 # 메모리2
-a = 5 # 메모리1
+a = 5  메모리1   
+a = 10 메모리2   
+a = 5  메모리1   
 같은 주소를 가리킴
 ---
 
