Update and rename BFS_숨바꼭질.md to BFS_숨바꼭질1697.md

--- a/BFS_숨바꼭질1697.md
+++ b/BFS_숨바꼭질1697.md
@@ -34,4 +34,27 @@ print(dp[k])
 - 그래도 의문? 가능하지 않나...?
 
 
-- 암튼 BFS로 시도 중
+
+```py
+import sys
+input = sys.stdin.readline
+from collections import deque
+
+def bfs():
+    global q,k
+    while q:
+        x = q.popleft()
+        if x == k:
+            return
+        for dx in [x*2, x+1, x-1]:
+            if 0<=dx<=100000 and dp[dx]==0:
+                dp[dx] = dp[x]+1
+                q.append(dx)
+
+n, k = map(int, input().split())
+dp = [0]*100000
+q = deque([n])
+bfs()
+print(dp[k])
+```
+[BFS시도 - IndexError]
