--- a/BFS_숨바꼭질1697.md
+++ b/BFS_숨바꼭질1697.md
@@ -57,4 +57,24 @@ q = deque([n])
 bfs()
 print(dp[k])
 ```
-[BFS시도 - IndexError]
+[BFS시도 - IndexError - dp size]
+
+```py
+def bfs():
+    global q,k
+    while q:
+        x = q.popleft()
+        if x == k:
+            return
+        for dx in [x*2, x+1, x-1]:
+            if 0<=dx<=100000 and dp[dx]==0:
+                dp[dx] = dp[x]+1
+                q.append(dx)
+
+n, k = map(int, input().split())
+dp = [0]*100001
+q = deque([n])
+bfs()
+print(dp[k])
+```
+[틀렸습니다 - ]
