--- a/BFS_숨바꼭질1697.md
+++ b/BFS_숨바꼭질1697.md
@@ -24,7 +24,7 @@ dfs(n,0)
 print(dp[k])
 # print(dp)
 ```
-
+[DFS 시도]
 - DFS로 풀려고 했음
 - depth 설정해주면 될 것 같아서
 - 하지만 DFS로 풀 수 없는 문제임
@@ -33,7 +33,9 @@ print(dp[k])
 - 이미 2와 4에서 이미 dp값을 저장되어 있기 때문에, if dp[nx]==0; dp[nx] = depth+1 이 안된다고 함.
 - 그래도 의문? 가능하지 않나...?
 
-
+<br>
+<br>
+<br>
 
 ```py
 import sys
@@ -59,6 +61,10 @@ print(dp[k])
 ```
 [BFS시도 - IndexError - dp size]
 
+<br>
+<br>
+<br>
+
 ```py
 def bfs():
     global q,k
@@ -77,4 +83,30 @@ q = deque([n])
 bfs()
 print(dp[k])
 ```
-[틀렸습니다 - ]
+[틀렸습니다 - 반례 찾기]
+[반례]
+0 1
+
+<br>
+<br>
+<br>
+
+```py
+def bfs():
+    global q, k
+    while q:
+        x = q.popleft()
+        if x == k:
+            return
+        for dx in [x*2, x+1, x-1]:
+            if (0<=dx<=100000) and (dx!=x) and (dp[dx]==0):
+                dp[dx] = dp[x]+1
+                q.append(dx)
+
+n, k = map(int, input().split())
+dp = [0]*100001
+q = deque([n])
+bfs()
+print(dp[k])
+```
+[SUCCESS]
