--- a/DFS_치즈2638.md
+++ b/DFS_치즈2638.md
@@ -65,3 +65,88 @@ print(time)
 [결과: 틀렸습니다]   
 [틀린 이유: 가장 가장자리 1 중에서 공기와 접하는 면이 2개인 치즈 좌표를 구하려고, 0이 2개인 1의 좌표를 구했으나, 그것은 외부 공기의 0인지 내부 공기의 0인지 알 수 없음]   
 [해결방법: 가장 끝 4모퉁이에서 0인 곳을 visited 2차원배열에서 True로 저장. visited = True가 2개이상인 1 좌표를 append하면 됨]   
+
+
+```py
+import sys
+input = sys.stdin.readline
+from collections import deque
+
+def find_cheese():
+    global arr,n,m
+
+    visited = [[0] * m for _ in range(n)]
+    visited[0][0] = visited[n - 1][0] = visited[0][m - 1] = visited[n - 1][m - 1] = 1
+
+    q_0 = deque([[0,0],[n-1,0],[0,m-1],[n-1,m-1]])
+    q_1 = deque([])
+
+
+    while q_0:
+        v = q_0.popleft()
+        x, y = v[0], v[1]
+        for dx,dy in [[0,1],[0,-1],[1,0],[-1,0]]:
+            nx = x + dx
+            ny = y + dy
+            if 0<=nx<n and 0<=ny<m and visited[nx][ny]==0:
+                visited[nx][ny] = 1
+                if arr[nx][ny] == 0:
+                    q_0.append([nx,ny])
+                else:
+                    # arr[nx][ny]=1
+                    # qq 0인근 1을 모두 저장
+                    # 녹을 수 있는 치즈인지 아닌지 구분하지 않음
+                    # 왜? 인근 0을 모두 탐색해서 visited=1인지 아닌지 알 수 없기 때문
+                    # 즉, 인근 모든 0이 탐색된 것이 전제하에, melting cheese인지 아닌지 확인할 수 있음
+                    q_1.append([nx,ny])
+    return q_1,visited
+
+# 녹을 치즈인지 아닌지 판단하는 과정
+# zero arr 말고, 다른 q를 만들어야 할 것 같음
+# cnt 2이상이면, 새로운 q에 저장
+def melting_cheese(q, visited):
+    global arr
+    cheese = deque([])
+    while q:
+        v = q.popleft()
+        x,y = v[0], v[1]
+        cnt=0
+        for dx, dy in [[0,1],[0,-1],[1,0],[-1,0]]:
+            nx = x + dx
+            ny = y + dy
+            if 0<=nx<n and 0<=ny<m and visited[nx][ny]==1 and arr[nx][ny]==0:
+                cnt+=1
+            if cnt>=2:
+                cheese.append([x,y])
+                break
+    return cheese
+
+def melting(q):
+    # melting cheeses함수 녹을 치즈 찾는 함수
+    # melting cheeses에서 찾은 치즈 좌표에 해당하는 배열 변화
+    # 왜 따로 만들어 줌? 바로 변화하면 되잖음
+    # 그러면, 바뀐 값으로 인해, melting cheese가 늘어남
+    # 한 치즈가 녹음으로써, 그 주변 치즈가 녹으면 안되는데 녹아야한다고 판단할 수 있음
+
+    while q:
+        v = q.popleft()
+        x, y = v[0], v[1]
+        arr[x][y]=0
+
+n,m = map(int, input().split())
+arr = [list(map(int, input().split())) for _ in range(n)]
+zero_arr = [[0]*m for _ in range(n)]
+cnt = 0
+
+
+while True:
+    q,visited = find_cheese()
+    cheeses = melting_cheese(q,visited)
+    if not cheeses:
+        break
+    melting(cheeses)
+    cnt += 1
+
+print(cnt)
+```
+[SUCCESS]
