--- a/BFS_숨바꼭질4_13913.md
+++ b/BFS_숨바꼭질4_13913.md
@@ -31,3 +31,17 @@ ans.append(n)
 print(*ans[::-1])
 ```
 [SSUCCESS]
+
+
+```py
+ans = deque([])
+nxt = k
+while True:
+    if nxt==n:
+        break
+    ans.appendleft(nxt)
+    nxt = dp[nxt][1]
+ans.appendleft(nxt)
+print(*ans)
+```
+[다른 방법]
