--- a/BFS_숨바꼭질2_12851.md
+++ b/BFS_숨바꼭질2_12851.md
@@ -27,4 +27,7 @@ bfs()
 print(dp[k][0])
 print(dp[k][1])
 ```
-[]
+
+![image](https://github.com/jiyeonnnny/AlgorithmStudy/assets/139419091/77c63726-847a-4a34-bf26-51e8e34d5fe8)
+
+[ case가 한개 더 더해져야하는데, ]
