--- a/str_문자열폭발_9935.md
+++ b/str_문자열폭발_9935.md
@@ -64,8 +64,9 @@ else:
     print('FRULA')
 ```
 [시간초과 - 앞에 시간초과를 보고, replace함수를 대신 사용해봄. 하지만 시간초과남]
+[방향성 : stack 활용하기]
 
+<br>
+<br>
+<br>
 
-<br>
-<br>
-<br>
