--- a/str_문자열폭발_9935.md
+++ b/str_문자열폭발_9935.md
@@ -70,3 +70,69 @@ else:
 <br>
 <br>
 
+```py
+import sys
+input = sys.stdin.readline
+
+str1 = list(input().strip())
+str2 = list(input().strip())
+stack = []
+
+for i in range(len(str1)):
+    if str1[i]!=str2[-1]:
+        stack.append(str1[i])
+    else:
+        stack.append(str1[i])
+        for j in range(len(str2)): # 0~len(str2)-1
+            if stack[-j-1]!=str2[-j-1]:
+                break
+        else:
+            for _ in range(len(str2)):
+                stack.pop()
+
+if stack:
+    print(*stack, sep='')
+else:
+    print('FRULA')
+
+```
+[IndexError]
+
+<br>
+<br>
+<br>
+
+```py
+import sys
+input = sys.stdin.readline
+
+str1 = list(input().strip())
+str2 = list(input().strip())
+stack = []
+
+for i in range(len(str1)):
+    if str1[i]!=str2[-1]:
+        stack.append(str1[i])
+    else:
+        stack.append(str1[i])
+
+        if len(stack)<len(str2):
+            continue
+
+        for j in range(len(str2)): # 0~len(str2)-1
+            if stack[-j-1]!=str2[-j-1]:
+                break
+        else:
+            for _ in range(len(str2)):
+                stack.pop()
+
+if stack:
+    print(*stack, sep='')
+else:
+    print('FRULA')
+```
+[SUCCESS]
+
+<br>
+<br>
+<br>
