--- a/BFS_벽부수기2_14442.md
+++ b/BFS_벽부수기2_14442.md
@@ -34,5 +34,55 @@ else:
     print(ans)
 ```
 [시간초과]
-- 원인:
-- 수정 방향성:
+- 원인: visited 출력해보니, 갔던 곳을 다시 가기도 함. 
+- 수정 방향성: if-elif 수정
+- 시간 초과에 대한 수정은 아니었음
+
+
+```py
+def bfs():
+    global k
+    q = deque([[0,0,0]])
+    while q:
+        v = q.popleft()
+        depth, x, y = v[0], v[1], v[2]
+        if x==n-1 and y==m-1:
+            return
+        for dx, dy in [[0,1],[0,-1],[1,0],[-1,0]]:
+            nx = x + dx
+            ny = y + dy
+            if 0<=nx<n and 0<=ny<m:
+                if arr[nx][ny]==0 and visited[depth][nx][ny]==0:
+                    if depth>0 and visited[depth-1][nx][ny]!=0:
+                        visited[depth][nx][ny]=visited[depth-1][nx][ny]
+                    else:
+                        visited[depth][nx][ny] = visited[depth][x][y] + 1
+                        q.append([depth,nx,ny])
+                elif arr[nx][ny]==1 and depth<k and visited[depth+1][nx][ny]==0:
+                    if visited[depth+1][x][y] == 0:
+                        visited[depth+1][x][y] = visited[depth][x][y]
+                    visited[depth + 1][nx][ny] = visited[depth][x][y] + 1
+                    q.append([depth+1, nx, ny])
+    return
+
+n, m, k = map(int, input().split())
+arr = [list(map(int, input().strip())) for _ in range(n)]
+visited = [[[0]*m for _ in range(n)] for _ in range(k+1)]
+for K in range(k+1):
+    visited[K][0][0]=1
+bfs()
+ans = 1000000
+if visited[k][n-1][m-1]!=0:
+    ans = min(ans, visited[k][n-1][m-1])
+if ans == 1000000:
+    print(-1)
+else:
+    print(ans)
+```
+- 처음 시간초과남. pypy로 돌리니 됨.
+- 48%에서 틀렸음.
+- 수정하고 싶은 부분
+  - visited[:][0][0]=1로 설정하는 부분, 이거, 뭔가 다른 방법, 더 일반화된 방법이 필요할 것 같음
+  - 출력할때 for문 돌리는데, 그냥 visited[k][n-1][m-1] 에 최솟값을 담는 방법 없나
+  - 각 depth별 visited 잘못된 값이 저장됨. k=1은 ㄱㅊ. k=2부터 이상함. k=2, depth=1은 n-1,m-1까지 도달하지 않음. 원인을 모르겠음. 출력해봤는데 머리가 안떠오름. 왜 10에서 멈춘걸까
+  - 궁금한게.. 만약 안부수고 최솟값에 도달할 경우, 그 최솟값도 반환해주나?
