--- a/BFS_벽부수기2_14442.md
+++ b/BFS_벽부수기2_14442.md
@@ -89,3 +89,48 @@ else:
   - 출력할때 for문 돌리는데, 그냥 visited[k][n-1][m-1] 에 최솟값을 담는 방법 없나
   - 각 depth별 visited 잘못된 값이 저장됨. k=1은 ㄱㅊ. k=2부터 이상함. k=2, depth=1은 n-1,m-1까지 도달하지 않음. 원인을 모르겠음. 출력해봤는데 머리가 안떠오름. 왜 10에서 멈춘걸까
   - 궁금한게.. 만약 안부수고 최솟값에 도달할 경우, 그 최솟값도 반환해주나?
+ 
+
+```py
+def bfs():
+    global k
+    q = deque([[0,0,0]])
+    while q:
+        v = q.popleft()
+        depth, x, y = v[0], v[1], v[2]
+        if x==n-1 and y==m-1:
+            return visited[depth][x][y]
+        for dx, dy in [[0,1],[0,-1],[1,0],[-1,0]]:
+            nx = x + dx
+            ny = y + dy
+            if 0<=nx<n and 0<=ny<m:
+                if arr[nx][ny]==0 and visited[depth][nx][ny]==0:
+                    if depth>0 and visited[depth-1][nx][ny]!=0:
+                        visited[depth][nx][ny]=visited[depth-1][nx][ny]
+                    else:
+                        visited[depth][nx][ny] = visited[depth][x][y] + 1
+                        q.append([depth,nx,ny])
+                elif arr[nx][ny]==1 and depth<k and visited[depth+1][nx][ny]==0:
+                    if visited[depth+1][x][y] == 0:
+                        visited[depth+1][x][y] = visited[depth][x][y]
+                        visited[depth + 1][nx][ny] = visited[depth][x][y] + 1
+                    else:
+                        visited[depth+1][nx][ny] = visited[depth][x][y] + 1
+                    q.append([depth+1, nx, ny])
+    return -1
+
+n, m, k = map(int, input().split())
+arr = [list(map(int, input().strip())) for _ in range(n)]
+visited = [[[0]*m for _ in range(n)] for _ in range(k+1)]
+
+for K in range(k+1):
+    visited[K][0][0]=1
+print(bfs())
+```
+[SUCCESS]
+- 최적화하는 방법 고민했음
+- 근본적으로 어디서 틀렸을까 생각함
+- 아까 k=2일때 depth=1일때 10에서 멈춘 이유: x==n-1 y==m-1이 먼저 나왔기 때문에 그 이상의 탐색이 의미없었음
+- 마지막 for문 해서 답을 찾는 것 보다, bfs에서 바로 return 해주면 그 값을 출력해주면, 마지막 for문 하나 없어도 됨
+- 더 최적화 할 수 있찌 않을까 생각함
+- 다른 사람 코드 참조하기
