--- a/BFS_벽부수고이동하기2_14442.md
+++ b/BFS_벽부수고이동하기2_14442.md
@@ -172,3 +172,38 @@ print(bfs())
 [다른 사람 코드]
 - 전체적인 구조는 동일
 - 내코드는 불필요한 조건문과 연산이 많았음
+
+<br>
+<br>
+<br>
+
+
+```py
+def bfs():
+    global k
+    q = deque([[0, 0, 0]])
+    visited[0][0][0]=1
+    while q:
+        v = q.popleft()
+        depth, x, y = v[0], v[1], v[2]
+        if x == n - 1 and y == m - 1:
+            return visited[depth][x][y]
+
+        for dx, dy in [[0, 1], [0, -1], [1, 0], [-1, 0]]:
+            nx = x + dx
+            ny = y + dy
+            if 0 <= nx < n and 0 <= ny < m:
+                if arr[nx][ny] == 0 and visited[depth][nx][ny] == 0:
+                    visited[depth][nx][ny] = visited[depth][x][y] + 1
+                    q.append([depth, nx, ny])
+                elif arr[nx][ny] == 1 and depth < k and visited[depth + 1][nx][ny] == 0:
+                    visited[depth + 1][nx][ny] = visited[depth][x][y] + 1
+                    q.append([depth + 1, nx, ny])
+    return -1
+
+n, m, k = map(int, input().split())
+arr = [list(map(int, input().strip())) for _ in range(n)]
+visited = [[[0] * m for _ in range(n)] for _ in range(k + 1)]
+print(bfs())
+```
+[다른 사람 참조해서 수정한 내 코드]
