--- a/백트래킹_알파벳_1987.md
+++ b/백트래킹_알파벳_1987.md
@@ -46,11 +46,11 @@ print(len(d))
 ```
 [틀렸습니다]
 - BFS + DP 방법이라 생각하고 풀었는데, 테케 3번 통과 못함
-- 겹쳤을때, 그것을 포함하지 않고 이동하는 경우도 고려해야 함
+- 동일해도, 그것을 포함하지 않고 이동하는 경우도 고려해야 함
 - 어떤 방법이 있을까
 - 백트래킹인 건 알겠는데 어떻게 구현해야할지 모르겠음
 - 그리고 그래프로 해결할 수 있다는데 어떻게 구현해야하나..
-
+- 그래프.. DFS + DP
 
 <br>
 <br>
