--- a/swea_최소스패닝트리_3124.md
+++ b/swea_최소스패닝트리_3124.md
@@ -13,5 +13,64 @@
 ![image](https://github.com/jiyeonnnny/AlgorithmStudy/assets/139419091/6645a154-920f-4f85-a400-22a9bbcc7a1d)
 
 ```py
+import sys
+input = sys.stdin.readline
 
+def dfs(v):
+    global mst, ans, vertex
+
+    mn_idx = 100000
+    mn_value = 1000000
+    for nv in range(1,vertex+1):
+        if nv not in mst and graph[v][nv]!=0 and mn_value>graph[v][nv]:
+            mn_value = graph[v][nv]
+            mn_idx = nv
+
+    if mn_value!=1000000:
+        mst.add(mn_idx)
+        ans += mn_value
+        dfs(mn_idx)
+
+
+vertex,e = map(int, input().split())
+graph = [[0]*(vertex+1) for _ in range(vertex+1)]
+
+for _ in range(e):
+    a,b,c = map(int, input().split())
+    graph[a][b] = graph[b][a] = c
+
+mst = {0,1}
+ans = 0
+# 모든 정점에서 돌려야함
+dfs(1)
+print(ans)
 ```
+[틀렸습니다]
+- 수정 필요함
+- heap 사용하는 방법 구성
+
+<br>
+<br>
+<br>
+
+# Kruskal's Algorithm
+- 그리디 이용해 가중치의 모든 정점을 최소 비용으로 연결하는 최적 해답을 구하는 것
+- 그리디
+  - 결정을 해야할때마다 그 순간에 가장 좋다고 생각되는 것을 선택함으로써 최종 해답에 도달
+  - 그리디는 그 순간에는 최적이지만, 전체 관점에서 최적이란 보장이 없음
+- MST(최소비용신장트리)가 최소 비용 간선으로 구성됨, 사이클을 포함하지 않음의 조건을 근거로 각 단계에서 사이클을 이루지 않는 최소 비용 간선을 선택함
+- 동작 원리
+  - 그래프의 간선들의 가중치의 오름차순 정렬
+  - 정렬된 간선 리스트에서 순서대로 사이클을 형성하지 않는 간선을 선택함
+    - 가장 낮은 가중치 먼저 선택
+    - 사이클 형성하는 간선을 제외함(왜)
+  - 해당 간선을 현재 MST의 집합에 추가함
+ 
+![image](https://github.com/jiyeonnnny/AlgorithmStudy/assets/139419091/d5a80f52-db4e-480e-be70-ca811f1c539c)
+
+- 주의 사항
+  - 간선을 이미 선택된 간선들의 집합에 추가할때 사이클을 생성하는지 체크
+  - 새로운 간선이 이미 다른 경로에 의해 연결되어 있는 정점들을 연결할때 사이클이 형성됨
+  - 추가할 새로운 간선의 양끝 정점이 같은 집합에 속해 있으면 사이클이 형성됨
+  - 사이클 생성 여부를 확인하는 방법 : union-find 알고리즘
+
