--- a/swea_최소스패닝트리_3124.md
+++ b/swea_최소스패닝트리_3124.md
@@ -74,3 +74,34 @@ print(ans)
   - 추가할 새로운 간선의 양끝 정점이 같은 집합에 속해 있으면 사이클이 형성됨
   - 사이클 생성 여부를 확인하는 방법 : union-find 알고리즘
 
+```py
+import sys
+input = sys.stdin.readline
+
+vertex,e = map(int, input().split())
+graph = [[0]*(vertex+1) for _ in range(vertex+1)]
+dic = {}
+weight_lst = []
+MST = set()
+
+for _ in range(e):
+    a,b,c = map(int, input().split())
+    graph[a][b] = graph[b][a] = c
+    weight_lst.append(c)
+    dic[c] = [a,b]
+
+# 가중치가 동일하면 어떻게 되는가
+weight_lst.sort()
+ans = 0
+for i in range(e):
+    if dic[weight_lst[i]][0] in MST and dic[weight_lst[i]][1] in MST:
+        continue
+    MST.add(dic[weight_lst[i]][0])
+    MST.add(dic[weight_lst[i]][1])
+    ans += weight_lst[i]
+    print(weight_lst[i])
+print(ans)
+```
+- 미완성
+- 마지막 간선 형성 어떻게 하는지 모르겠어
+- 
