Update and rename 100000_미완성_DFS_알파벳_1987.md to DFS_알파벳_1987.md

--- a/DFS_알파벳_1987.md
+++ b/DFS_알파벳_1987.md
@@ -126,3 +126,39 @@ dfs(0,0,1)
 print(ans)
 ```
 [ㅆㅃ]
+- 원인: 탐색하는 방향 순서에 따라 최적화가 되는 경우가 있고 최악이 되는 경우가 있다
+- 수정 방향성: bit연산 활용, while stack을 활용한 DFS
+
+<br>
+<br>
+<br>
+
+
+```py
+n,m = map(int, input().split())
+arr = [list(input().strip()) for _ in range(n)]
+stack = [[0,0,1,(1<<(ord(arr[0][0])-ord('A')))]]
+check = [[0]*m for _ in range(n)]
+result = 0
+while stack:
+    x,y,cnt,visit = stack.pop()
+    if result<cnt:
+        result = cnt
+    if result==26:
+        break
+    for dx,dy in [[-1,0],[1,0],[0,1],[0,-1]]:
+        nx = x + dx
+        ny = y + dy
+        if 0<=nx<n and 0<=ny<m:
+            if ((1 << (ord(arr[nx][ny]) - ord('A'))) & visit) == 0:
+                nxt_visit = (1<<(ord(arr[nx][ny])-ord('A'))) | visit
+                if check[nx][ny]!=nxt_visit:
+                    stack.append([nx,ny,cnt+1,nxt_visit])
+                    check[nx][ny] = nxt_visit
+print(result)
+```
+[SUCCESS]
+- visit한 알파벳을 비트연산을 활용하여 표현함
+- stack을 append pop해줘서, 전체적인 구조는 BFS이지만, DFS로 동작함
+- DFS이지만, 재귀가 아니라서, break을 해주면, 바로 끝날 수 있음
+- 탐색 방향을 최적화 하지 않아도 시간내에 해결할 수 있음
