--- a/swea_준환이의양팔저울_3234.md
+++ b/swea_준환이의양팔저울_3234.md
@@ -129,7 +129,8 @@ for t in range(int(input())):
 
 [시간초과남]
 -어떻게 해결할 수 있을까?
-- 가지치기가 필요함, 순서상관없이 r의 총 합이 큰 경우,
+- 가지치기가 필요함, 순서상관없이 r의 총 합이 큰 경우
+- 이 가지치기로는 부족함. 또다른 방법 없을까
 
 <br>
 <br>
