--- a/swea_준환이의양팔저울_3234.md
+++ b/swea_준환이의양팔저울_3234.md
@@ -131,6 +131,8 @@ for t in range(int(input())):
 -어떻게 해결할 수 있을까?
 - 가지치기가 필요함, 순서상관없이 r의 총 합이 큰 경우
 - 이 가지치기로는 부족함. 또다른 방법 없을까
+- 비트 연산 활용해서 모든 경우의 수를 구하는 방법 - 시간 복잡도는 동일하지 않나?
+
 
 <br>
 <br>
