--- a/swea_준환이의양팔저울_3234.md
+++ b/swea_준환이의양팔저울_3234.md
@@ -131,9 +131,46 @@ for t in range(int(input())):
 -어떻게 해결할 수 있을까?
 - 가지치기가 필요함, 순서상관없이 r의 총 합이 큰 경우
 - 이 가지치기로는 부족함. 또다른 방법 없을까
-- 비트 연산 활용해서 모든 경우의 수를 구하는 방법 - 시간 복잡도는 동일하지 않나?
+- 비트 연산 활용해서 모든 경우의 수를 구하는 방법 - 시간 복잡도는 동일하지 않나? 다름
+```py
+import time
+
+def dfs(lst, depth):
+    if depth==5:
+        print(lst)
+        return
+    for i in range(5):
+        if visit[i]==0:
+            visit[i]=1
+            lst.append(arr[i])
+            dfs(lst,depth+1)
+            lst.pop()
+            visit[i]=0
+
+arr = [1,2,3,4,5]
+visit = [0]*5
+start = time.time()
+dfs([],0)
+end = time.time()
+print(f'{end-start:.5f} sec')
+# 0.00100sec
+
+start = time.time()
+n=5
+for i in range(1<<n):
+    for j in range(n):
+        if i&(1<<j):
+            print(arr[j],end='')
+    print()
+print()
+end = time.time()
+print(f'{end-start:.5f} sec')
+# 0.00000sec
+```
 
 
 <br>
 <br>
 <br>
+
+
