--- a/swea_준환이의양팔저울_3234.md
+++ b/swea_준환이의양팔저울_3234.md
@@ -174,3 +174,89 @@ print(f'{end-start:.5f} sec')
 <br>
 
 
+```py
+def next_permutation(lst):
+    i = n-1
+    while (i>0 and lst[i-1]>=lst[i]):
+        i-=1
+    if i==0:
+        return False
+    j=n-1
+    while (lst[i-1]>=lst[j]):
+        j-=1
+    lst[i-1], lst[j] = lst[j], lst[i-1]
+    k = n-1
+    while (i<k):
+        lst[i],lst[k] = lst[k],lst[i]
+        i+=1
+        k-=1
+    return True
+
+
+
+factorial = [0] * 10
+factorial[0] = factorial[1] = 1
+for i in range(2, 10):
+    factorial[i] = factorial[i - 1] * i
+
+
+
+for t in range(int(input())):
+    n = int(input())
+    arr = list(map(int, input().split()))
+    ans = 0
+    total = sum(arr)
+
+
+    idx_sequence = []
+    lst = [i for i in range(n)]
+    while True:
+        idx_sequence.append(lst[:])
+        if not next_permutation(lst):
+            break
+
+
+    for i in range(1<<n):
+        bit = [0]*n
+        l = 0
+        for j in range(n):
+            if i & (1<<j):
+                bit[j]=1
+                l += arr[j]
+        if bit == [0]*n:
+            continue
+        if bit == [1]*n:
+            ans+=factorial[n]
+            continue
+        if l<total-l:
+            continue
+
+
+        # 순서 비교
+        for idx in idx_sequence:
+            if bit[idx[0]]==0:
+                continue
+            l = r = 0
+            for ii in idx:
+                if bit[ii]==1:
+                    l+=arr[ii]
+                else:
+                    r+=arr[ii]
+                if l<r:
+                    break
+            else:
+                ans+=1
+
+
+    print(f'#{t+1} {ans}')
+```
+[코드 수정]
+- permutation 함수 구현 시간이 훨씬 빠름 - idx_sequence
+- 비트연산 - bit
+- 가지치기
+  - bit 전부 0일때
+  - bit 전부 1일때
+  - 전체 합이 애초에 l<r 일때
+  - 첫 값을 r부터 넣을때
+ 
+- 여전히 시간초과. 수정방향. 재귀 끝나고 이중 for문으로 연산하는 방법
