--- a/swea_준환이의양팔저울_3234.md
+++ b/swea_준환이의양팔저울_3234.md
@@ -260,3 +260,42 @@ for t in range(int(input())):
   - 첫 값을 r부터 넣을때
  
 - 여전히 시간초과. 수정방향. 재귀 끝나고 이중 for문으로 연산하는 방법
+
+<br>
+<br>
+<br>
+
+```py
+for t in range(int(input())):
+    n = int(input())
+    arr = list(map(int, input().split()))
+    total = sum(arr)
+    l = r = 0
+
+    ans = 0
+    stack = []
+    for i in range(n):
+        stack.append([arr[i],0,(1<<i)])
+
+    while stack:
+        l, r, visit = stack.pop()
+
+        if l<r:
+            continue
+
+        if visit == ((1 << n) - 1):
+            print(l,r,visit)
+            ans+=1
+            continue
+
+        for i in range(n):
+            if (1<<i) & visit==0:
+                nxt_visit = ((1<<i)|visit)
+                if l+arr[i]>=r:
+                    stack.append([l+arr[i], r, nxt_visit])
+                elif l>=r+arr[i]:
+                    stack.append([l, r+arr[i], nxt_visit])
+                    print('l>=r+arr[i]')
+    print(f'#{t+1} {ans}')
+```
+[비트마스킹? 방법으로 해결 중]
