--- a/swea_준환이의양팔저울_3234.md
+++ b/swea_준환이의양팔저울_3234.md
@@ -298,4 +298,4 @@ for t in range(int(input())):
                     print('l>=r+arr[i]')
     print(f'#{t+1} {ans}')
 ```
-[비트마스킹? 방법으로 해결 중]
+[비트마스크 방법으로 해결 중]
