--- a/미완성_swea_준환이의양팔저울_3234.md
+++ b/미완성_swea_준환이의양팔저울_3234.md
@@ -299,3 +299,49 @@ for t in range(int(input())):
     print(f'#{t+1} {ans}')
 ```
 [비트마스크 방법으로 해결 중]
+- 다른 해결 방안 : 가지치기 추가(남아있는 추를 어떻게 올리든 right가 더 클 때)
+
+<br>
+<br>
+<br>
+
+```py
+factorial = [0]*10
+factorial[0] = factorial[1] = 1
+for i in range(2,10):
+    factorial[i] = factorial[i-1] * i
+ 
+for t in range(int(input())):
+    n = int(input())
+    arr = list(map(int, input().split()))
+    total = sum(arr)
+    l = r = 0
+ 
+    ans = 0
+    stack = []
+    for i in range(n):
+        stack.append([arr[i],0,(1<<i), total-arr[i], n-1])
+ 
+    while stack:
+        l, r, visit, remain_value, remain_cnt = stack.pop()
+        if l<r:
+            continue
+        if visit == ((1 << n) - 1):
+            ans+=1
+            continue
+        if l>=r+remain_value:
+            ans+=(2**remain_cnt)*factorial[remain_cnt]
+            continue
+        for i in range(n):
+            if (1<<i) & visit==0:
+                nxt_visit = ((1<<i)|visit)
+                if l+arr[i]>=r:
+                    stack.append([l+arr[i], r, nxt_visit, remain_value-arr[i], remain_cnt-1])
+                if l>=r+arr[i]:
+                    stack.append([l, r+arr[i], nxt_visit, remain_value-arr[i], remain_cnt-1])
+    print(f'#{t+1} {ans}')
+```
+[SUCCESS]
+- 비트마스크
+- while stack
+- permutation
