--- a/DFS_알파벳_1987.md
+++ b/DFS_알파벳_1987.md
@@ -162,3 +162,48 @@ print(result)
 - stack을 append pop해줘서, 전체적인 구조는 BFS이지만, DFS로 동작함
 - DFS이지만, 재귀가 아니라서, break을 해주면, 바로 끝날 수 있음
 - 탐색 방향을 최적화 하지 않아도 시간내에 해결할 수 있음
+
+<br>
+<br>
+<br>
+
+
+```py
+dxdy = [[1,0],[-1,0],[0,1],[0,-1]]
+
+def dfs(x,y,cnt):
+    global ans
+    ans = max(ans, cnt)
+    if ans == 26 or cnt == 26:
+        return
+
+    if visited[x][y] > cnt:
+        return
+
+    for dx,dy in dxdy:
+        nx = x + dx
+        ny = y + dy
+        if 0<=nx<n and 0<=ny<m and alpha[ord(arr[nx][ny])-ord('A')]==0:
+            alpha[ord(arr[nx][ny])-ord('A')]=1
+            visited[nx][ny] = cnt + 1
+            dfs(nx,ny,cnt+1)
+            alpha[ord(arr[nx][ny])-ord('A')]=0
+
+
+n,m = map(int, input().split())
+arr = [list(input().strip()) for _ in range(n)]
+
+visited = [[0]*m for _ in range(n)]
+visited[0][0]=1
+
+alpha = [0]*26
+alpha[ord(arr[0][0])-ord('A')]=1
+
+ans = 0
+dfs(0,0,1)
+print(ans)
+```
+[SUCCESS]
+- dxdy list를 전역변수로 선언하여 사용하는 것이 시간 초과를 개선
+- 이유는 선언해주지 않으면, for문을 돌릴때마다 새로 선언해주기 때문
+- 또 기저조건 ans 값 갱신을 할때, for문을 돌리기 전에 갱신하는 것이 더 시간효율적
