--- a/백트래킹_로또_6603.md
+++ b/백트래킹_로또_6603.md
@@ -32,3 +32,33 @@ while True:
 - 처음에 막막함
 - 구글링해봄
 - 다시 풀어보기
+
+
+```py
+import sys
+input = sys.stdin.readline
+
+def dfs(lst, depth):
+    if depth==6:
+        print(*lst)
+        return
+
+    if lst:
+        idx = arr.index(lst[-1]) + 1
+    else:
+        idx = 0
+    for i in range(idx, n):
+        lst.append(arr[i])
+        dfs(lst,depth+1)
+        lst.pop()
+
+
+while True:
+    ARR = list(map(int, input().split())) # 더 간단한 방법 없을까 try-except 시도-실패
+    if ARR[0]==0:
+        break
+    n,*arr = ARR
+    dfs([],0) # 조합 재귀로 구현
+```
+[다시 풀어봄]
+- 더 간단한 방법 없을까 싶어서 다른 사람 답안 봄. 대부분 라이브러리 사용
