--- a/백트래킹_로또_6603.md
+++ b/백트래킹_로또_6603.md
@@ -33,6 +33,10 @@ while True:
 - 구글링해봄
 - 다시 풀어보기
 
+<br>
+<br>
+<br>
+
 
 ```py
 import sys
@@ -62,3 +66,20 @@ while True:
 ```
 [다시 풀어봄]
 - 더 간단한 방법 없을까 싶어서 다른 사람 답안 봄. 대부분 라이브러리 사용
+
+
+<br>
+<br>
+<br>
+
+```py
+from itertools import combinations
+
+while True:
+    k,*s = map(int, input().split())
+    if k==0:
+        break
+    for i in combinations(s,6):
+        print(*i)
+    print()
+```
