--- a/미완성_BFS_확장게임_16920.md
+++ b/미완성_BFS_확장게임_16920.md
@@ -19,13 +19,11 @@ def bfs():
                     arr[nx][ny]=num
                     cnt[num-1]+=1
                     stack.append([num,nx,ny,depth+1])
-        # depth를 뺀 stack을 extend해줘야함
-        # 근데 depth를 제외하고 stack자체를 구성할 순 없음
-        # 그렇다고 for문 돌리기엔 시간 비효율적임
-        # dfs할땐 depth를 고려하면서
-        # players엔 depth없이 사용할 순 없을까
-        # players에는 필요없는 depth이긴 한데, 이렇게 넣으면 메모리를 조금 더 쓰면서 시간은 효율적으로 쓸 수 있음
         players.extend(stack)
+
+
+
+
 
 n,m,p = map(int, input().split())
 Sp = list(map(int, input().split()))
@@ -44,5 +42,224 @@ bfs()
 print(*cnt)
 ```
 [틀렸습니다]
-- 반례 찾기
-- 우선순위큐를 사용하는 방법
+- if stack[-1][3]==Sp[num-1]: break 에서 DFS로 확장하던게 마지막 하나가 확장 안한체 다음으로 넘어감.
+- if stack[-1][3]==Sp[num-1]+1: break 로 했어야했을걸?
+- 일단 BFS로 바꿨음
+
+<br>
+<br>
+<br>
+
+```py
+import sys
+input = sys.stdin.readline
+from collections import deque
+
+d = [[0,1],[0,-1],[1,0],[-1,0]]
+
+def bfs():
+    while players:
+        x,y,num,depth = players.popleft()
+
+        q = deque([[x,y,num,0]])
+        while q:
+            if q[0][3]==Sp[num-1]:
+                break
+            x, y, num, depth = q.popleft()
+            for dx,dy in d:
+                nx = x + dx
+                ny = y + dy
+                if 0<=nx<n and 0<=ny<m and arr[nx][ny]=='.':
+                    arr[nx][ny]=num
+                    q.append([nx,ny,num,depth+1])
+                    cnt[num - 1] += 1
+            players.extend(q)
+
+
+n,m,p = map(int, input().split())
+Sp = list(map(int, input().split()))
+arr = [list(input().strip()) for _ in range(n)]
+players = []
+cnt = [0]*p
+for i in range(n):
+    for j in range(m):
+        if arr[i][j].isdigit():
+            players.append([i,j, int(arr[i][j]), 0])
+            arr[i][j]=int(arr[i][j])
+            cnt[int(arr[i][j])-1] += 1
+players.sort(key=lambda x:x[2])
+players = deque(players)
+
+bfs()
+print(*cnt)
+```
+[시간초과]
+- 확장은 제대로 되는데 시간초과가 남
+- extend에서 난다고 함
+
+```py
+import sys
+input = sys.stdin.readline
+from collections import deque
+
+d = [[0,1],[0,-1],[1,0],[-1,0]]
+
+def bfs():
+    global flag
+    while players:
+        if flag == 0:
+            return
+        x,y,num,depth = players.popleft()
+        q = deque([[x,y,num,0]])
+        while q:
+            if q[0][3]==Sp[num-1]:
+                break
+            x, y, num, depth = q.popleft()
+            for dx,dy in d:
+                nx = x + dx
+                ny = y + dy
+                if 0<=nx<n and 0<=ny<m and arr[nx][ny]=='.':
+                    arr[nx][ny]=num
+                    flag-=1
+                    q.append([nx,ny,num,depth+1])
+                    cnt[num - 1] += 1
+            players.extend(q)
+
+
+n,m,p = map(int, input().split())
+Sp = list(map(int, input().split()))
+arr = [list(input().strip()) for _ in range(n)]
+players = []
+flag = n*m
+cnt = [0]*p
+for i in range(n):
+    for j in range(m):
+        if arr[i][j].isdigit():
+            players.append([i,j, int(arr[i][j]), 0])
+            arr[i][j]=int(arr[i][j])
+            cnt[int(arr[i][j])-1] += 1
+            flag-=1
+players.sort(key=lambda x:x[2])
+players = deque(players)
+
+bfs()
+print(*cnt)
+```
+[시간초과]
+- flag를 만들어서 모든 지도가 다 채워지면 return 하도록 가지치기 했는데 시간초과남
+- 이유1 : #
+- 이유2 : 아래와 같은 case
+- . # .
+- # . #
+- . # .
+
+<br>
+<br>
+<br>
+
+```py
+import sys
+input = sys.stdin.readline
+from collections import deque
+
+d = [[0,1],[0,-1],[1,0],[-1,0]]
+
+def spread(lst, num):
+    global flag
+    # stack 활용한 spread
+    nxt_lst = []
+    while lst:
+        x,y,depth = lst.pop()
+        for dx,dy in d:
+            nx = x + dx
+            ny = y + dy
+            if 0<=nx<n and 0<=ny<m and arr[nx][ny]=='.':
+                arr[nx][ny] = num
+                cnt[num-1] += 1
+                flag -= 1
+                if not flag:
+                    return []
+                if depth+1 == Sp[num-1]:
+                    nxt_lst.append([nx,ny,0])
+                else:
+                    lst.append([nx,ny,depth+1])
+    return nxt_lst
+
+
+def bfs():
+    while flag:
+        for i in players.keys():
+            if not players[i]:
+                continue
+            players[i] = spread(players[i], i)
+            if not flag:
+                return
+
+
+n,m,p = map(int, input().split())
+Sp = list(map(int, input().split()))
+arr = [list(input().strip()) for _ in range(n)]
+cnt = [0]*p
+flag = 0
+players = {}
+for i in range(p):
+    players[i+1] = []
+for i in range(n):
+    for j in range(m):
+        if arr[i][j].isdigit():
+            players[int(arr[i][j])].append([i,j,0]) # x y depth
+            cnt[int(arr[i][j])-1]+=1
+        if arr[i][j]=='.':
+            flag+=1
+bfs()
+print(*cnt)
+```
+[시간초과]
+- flag가 0 이 되지 못할 수 있기 때문
+- extend없앨려고 dic사용했음
+
+<br>
+<br>
+<br>
+
+```py
+import sys
+input = sys.stdin.readline
+from collections import deque
+
+d = [[0,1],[0,-1],[1,0],[-1,0]]
+
+def bfs():
+    while players:
+        num, x, y, depth = players.popleft()
+        for dx,dy in d:
+            nx = x + dx
+            ny = y + dy
+            if 0<=nx<n and 0<=ny<m and arr[nx][ny]=='.':
+                arr[nx][ny]=num
+                cnt[num - 1] += 1
+                if depth+1 == Sp[num-1]:
+                    players.append([num, nx, ny, 0])
+                else:
+                    players.appendleft([num, nx, ny, depth+1])
+
+n,m,p = map(int, input().split())
+Sp = list(map(int, input().split()))
+arr = [list(input().strip()) for _ in range(n)]
+cnt = [0]*p
+players = []
+for i in range(n):
+    for j in range(m):
+        if arr[i][j].isdigit():
+            players.append([int(arr[i][j]), i, j, 0])
+            arr[i][j] = int(arr[i][j])
+            cnt[int(arr[i][j])-1]+=1
+players.sort(key=lambda x:x[0])
+
+players = deque(players)
+bfs()
+print(*cnt)
+```
+[틀렸습니다]
+- deque를 stack처럼 사용하는 아이디어를 생각해냄
+- 근데 틀렸음 반례를 아직 못찾았음
