--- a/벨만포드_타임머신_11657.md
+++ b/벨만포드_타임머신_11657.md
@@ -44,8 +44,61 @@ else:
             break
         print(time[i])
 ```
-[틀렸음]
-- 일단 다익스트라로 처음에 풀엇는데
-- 다익은 경로없을때 무한루프에 빠짐
-- 그래서 벨만포드를 사용해야함
-- 벨만포드를 사용했는데, 어디서 틀렸는지 모르겠음
+[틀렸습니다]
+- 다익스트라로 풀면, 무한루프 빠질 수 있음
+- 가중치가 음의 값이라서, 음의 사이클에 빠질 수 있음
+- 그리고 출력에서 틀렸음
+- time[i]==INF일때 -1만 출력하는게 아님 계속 출력해야함
+
+<br>
+<br>
+<br>
+
+```py
+import sys
+input = sys.stdin.readline
+import heapq
+
+def Bellman_Ford(distance,parents):
+    distance[1]=0
+    for _ in range(V-1):
+        for node in range(1,V+1):
+            for nxt in graph[node]:
+                nxt_node = nxt[0]
+                nxt_dist = nxt[1]
+                if distance[nxt_node] > nxt_dist + distance[node]:
+                    distance[nxt_node] = nxt_dist + distance[node]
+                    parents[nxt_node] = node
+
+    for node in range(1,V+1):
+        for nxt in graph[node]:
+            nxt_node = nxt[0]
+            nxt_dist = nxt[1]
+            if distance[nxt_node]>distance[node]+nxt_dist:
+                return -1 
+    return distance[2:]
+
+
+V, E = map(int, input().split())
+graph = [[] for _ in range(V+1)]
+for _ in range(E):
+    s,e,w = map(int, input().split())
+    graph[s].append((e,w))
+distance = [float('inf')]*(V+1)
+parents = [None]*(V+1)
+ans = Bellman_Ford(distance,parents)
+if type(ans)==int:
+    print(ans)
+else:
+    for i in ans:
+        if i==float('inf'):
+            print(-1)
+        else:
+            print(i)
+```
+[SUCCESS]
+
+
+<br>
+<br>
+<br>
