--- a/프로그래머스_더맵게.md
+++ b/프로그래머스_더맵게.md
@@ -4,7 +4,9 @@
    - heapify 함수 사용
    - heappop, heappush, K비교 순서 확인할 것
    - len >= 2일때, 하지만 마지막 한 개 남았을때 비교
-   - answer이 0인 경우 존재함
+   - **answer이 0인 경우 존재함**
+  
+
 
 <br>
 <br>
