--- a/백준/백준_18110_파이썬.md
+++ b/백준/백준_18110_파이썬.md
@@ -1,1 +1,93 @@
-# [백준]
+# [백준 18110] 파이썬 풀이
+```py
+import sys
+input = sys.stdin.readline
+import heapq
+
+N = int(input())
+pop_count = round(N*0.15)
+h = []
+
+for _ in range(N):
+    value = int(input())
+    heapq.heappush(h, value)
+
+for _ in range(pop_count):
+    heapq.heappop(h)
+
+avg = 0
+for _ in range(N-pop_count*2):
+    tmp = heapq.heappop(h)
+    avg += tmp
+
+print(round(avg/(N-pop_count*2)))
+```
+처음 접근할때 input 개수가 많길래, for문 한방에 끝내야 겠다 생각함. 그래서 heapq 자료구조를 사용함
+[결과 : 1% ZeroDivisionError]
+
+<br>
+
+```py
+import sys
+input = sys.stdin.readline
+import heapq
+
+N = int(input())
+pop_count = round(N*0.15)
+h = []
+
+for _ in range(N):
+    value = int(input())
+    heapq.heappush(h, value)
+
+for _ in range(pop_count):
+    heapq.heappop(h)
+
+avg = 0
+for _ in range(N-pop_count*2):
+    tmp = heapq.heappop(h)
+    avg += tmp
+    
+if (N-pop_count*2)>0:
+    print(round(avg/(N-pop_count*2)))
+else:
+    print(0)
+```
+zeroDivision 이 일어나서, if문으로 걸러줌
+[결과: 13% 틀렸습니다]
+
+<br>
+
+```py
+import sys
+input = sys.stdin.readline
+import heapq
+
+def round(f):
+    if f-int(f)>=0.5:
+        return int(f)+1
+    else:
+        return int(f)
+
+n = int(input())
+h = []
+for _ in range(n):
+    num = int(input())
+    heapq.heappush(h, num)
+
+round_n = round(n*0.15)
+for _ in range(round_n):
+    heapq.heappop(h)
+
+if n-round_n*2>0:
+    total_num = 0
+    for _ in range(n-round_n*2):
+        total_num += heapq.heappop(h)
+    print(round(total_num/(n-round_n*2)))
+else:
+    print(0)
+```
+round함수를 재정의해줌
+[결과 : 100%]
+
+<br>
