--- a/알고리즘스터디/[프로그래머스] 요격시스템.md
+++ b/알고리즘스터디/[프로그래머스] 요격시스템.md
@@ -23,8 +23,10 @@ def solution(targets):
    - s<e1<=e  pass
    - e<e1  new_e1=e
   
-3. test case
+
 ```
+test case
+
 targets1 = [[4,5],[4,8],[10,14],[11,13],[5,12],[3,7],[1,4]]
 targets2 = [[1,2],[2,3],[3,4]]
 targets3 = [[1,3],[2,10],[9,11]]
